--- a/HW6_CSS/112305109_CSS_HW.html
+++ b/HW6_CSS/112305109_CSS_HW.html
@@ -67,8 +67,8 @@
 						<ul>
 							<li><a href="https://kun-weng.github.io/1141_IntroToCS_1123051409/HW1_Github/HelloWorld.txt">HW1-GitHub</a></li>
 							<li><a href="https://kun-weng.github.io/1141_IntroToCS_1123051409/HW2_DeepDreamGenerator/HW2.pdf">HW2-Deep</a></li>
-							<li><a href="https://kun-weng.github.io/1141_IntroToCS_1123051409/HW3_Excel1">HW3-Excel1</a></li>
-							<li><a href="https://kun-weng.github.io/1141_IntroToCS_1123051409/HW4_Excel2">HW4-Excel2</a></li>
+							<li><a href="https://github.com/Kun-Weng/1141_IntroToCS_1123051409/tree/main/HW3_Excel1">HW3-Excel1</a></li>
+							<li><a href="https://github.com/Kun-Weng/1141_IntroToCS_1123051409/tree/main/HW4_Excel2">HW4-Excel2</a></li>
 							<li><a href="https://kun-weng.github.io/1141_IntroToCS_1123051409/HW5_Portfoilo/HW5_112305109.html">HW5-Porfolio</a></li>
 
 						</ul>
@@ -117,14 +117,6 @@
 				</p>	
 		</section>
 	</main>
-
-
-
-
-
-
-
-
 
 
 
